opencti-platform/opencti-graphql/src/stixpattern/STIXPatternParser.js
// Generated from ./src/stixpattern/STIXPattern.g4 by ANTLR 4.13.0
// jshint ignore: start
import antlr4 from './STIXAntlr';
import STIXPatternListener from './STIXPatternListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class STIXPatternParser extends antlr4.Parser {

    static grammarFileName = "STIXPattern.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            null, null, "'AND'", "'OR'", "'NOT'", "'FOLLOWEDBY'", 
                            "'LIKE'", "'MATCHES'", "'ISSUPERSET'", "'ISSUBSET'", 
                            "'EXISTS'", "'LAST'", "'IN'", "'START'", "'STOP'", 
                            "'SECONDS'", "'true'", "'false'", "'WITHIN'", 
                            "'REPEATS'", "'TIMES'", null, null, null, null, 
                            "'<'", "'<='", "'>'", "'>='", "'''", "':'", 
                            "'.'", "','", "')'", "'('", "']'", "'['", "'+'", 
                            null, "'-'", "'^'", "'/'", "'*'" ];
    static symbolicNames = [ null, "IntNegLiteral", "IntPosLiteral", "FloatNegLiteral", 
                             "FloatPosLiteral", "HexLiteral", "BinaryLiteral", 
                             "StringLiteral", "BoolLiteral", "TimestampLiteral", 
                             "AND", "OR", "NOT", "FOLLOWEDBY", "LIKE", "MATCHES", 
                             "ISSUPERSET", "ISSUBSET", "EXISTS", "LAST", 
                             "IN", "START", "STOP", "SECONDS", "TRUE", "FALSE", 
                             "WITHIN", "REPEATS", "TIMES", "IdentifierWithoutHyphen", 
                             "IdentifierWithHyphen", "EQ", "NEQ", "LT", 
                             "LE", "GT", "GE", "QUOTE", "COLON", "DOT", 
                             "COMMA", "RPAREN", "LPAREN", "RBRACK", "LBRACK", 
                             "PLUS", "HYPHEN", "MINUS", "POWER_OP", "DIVIDE", 
                             "ASTERISK", "WS", "COMMENT", "LINE_COMMENT", 
                             "InvalidCharacter" ];
    static ruleNames = [ "pattern", "observationExpressions", "observationExpressionOr", 
                         "observationExpressionAnd", "observationExpression", 
                         "comparisonExpression", "comparisonExpressionAnd", 
                         "propTest", "startStopQualifier", "withinQualifier", 
                         "repeatedQualifier", "objectPath", "objectType", 
                         "firstPathComponent", "objectPathComponent", "setLiteral", 
                         "primitiveLiteral", "orderableLiteral" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = STIXPatternParser.ruleNames;
        this.literalNames = STIXPatternParser.literalNames;
        this.symbolicNames = STIXPatternParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 1:
    	    		return this.observationExpressions_sempred(localctx, predIndex);
    	case 2:
    	    		return this.observationExpressionOr_sempred(localctx, predIndex);
    	case 3:
    	    		return this.observationExpressionAnd_sempred(localctx, predIndex);
    	case 4:
    	    		return this.observationExpression_sempred(localctx, predIndex);
    	case 5:
    	    		return this.comparisonExpression_sempred(localctx, predIndex);
    	case 6:
    	    		return this.comparisonExpressionAnd_sempred(localctx, predIndex);
    	case 14:
    	    		return this.objectPathComponent_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    observationExpressions_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    observationExpressionOr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    observationExpressionAnd_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    observationExpression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 3:
    			return this.precpred(this._ctx, 3);
    		case 4:
    			return this.precpred(this._ctx, 2);
    		case 5:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    comparisonExpression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 6:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    comparisonExpressionAnd_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 7:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    objectPathComponent_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 8:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	pattern() {
	    let localctx = new PatternContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, STIXPatternParser.RULE_pattern);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 36;
	        this.observationExpressions(0);
	        this.state = 37;
	        this.match(STIXPatternParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	observationExpressions(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ObservationExpressionsContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 2;
	    this.enterRecursionRule(localctx, 2, STIXPatternParser.RULE_observationExpressions, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 40;
	        this.observationExpressionOr(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new ObservationExpressionsContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, STIXPatternParser.RULE_observationExpressions);
	                this.state = 42;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 43;
	                this.match(STIXPatternParser.FOLLOWEDBY);
	                this.state = 44;
	                this.observationExpressions(3); 
	            }
	            this.state = 49;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	observationExpressionOr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ObservationExpressionOrContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 4;
	    this.enterRecursionRule(localctx, 4, STIXPatternParser.RULE_observationExpressionOr, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 51;
	        this.observationExpressionAnd(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 58;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new ObservationExpressionOrContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, STIXPatternParser.RULE_observationExpressionOr);
	                this.state = 53;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 54;
	                this.match(STIXPatternParser.OR);
	                this.state = 55;
	                this.observationExpressionOr(3); 
	            }
	            this.state = 60;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	observationExpressionAnd(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ObservationExpressionAndContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 6;
	    this.enterRecursionRule(localctx, 6, STIXPatternParser.RULE_observationExpressionAnd, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 62;
	        this.observationExpression(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 69;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new ObservationExpressionAndContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, STIXPatternParser.RULE_observationExpressionAnd);
	                this.state = 64;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 65;
	                this.match(STIXPatternParser.AND);
	                this.state = 66;
	                this.observationExpressionAnd(3); 
	            }
	            this.state = 71;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	observationExpression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ObservationExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 8;
	    this.enterRecursionRule(localctx, 8, STIXPatternParser.RULE_observationExpression, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 81;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 44:
	            localctx = new ObservationExpressionSimpleContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 73;
	            this.match(STIXPatternParser.LBRACK);
	            this.state = 74;
	            this.comparisonExpression(0);
	            this.state = 75;
	            this.match(STIXPatternParser.RBRACK);
	            break;
	        case 42:
	            localctx = new ObservationExpressionCompoundContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 77;
	            this.match(STIXPatternParser.LPAREN);
	            this.state = 78;
	            this.observationExpressions(0);
	            this.state = 79;
	            this.match(STIXPatternParser.RPAREN);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 91;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 89;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ObservationExpressionStartStopContext(this, new ObservationExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, STIXPatternParser.RULE_observationExpression);
	                    this.state = 83;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 84;
	                    this.startStopQualifier();
	                    break;

	                case 2:
	                    localctx = new ObservationExpressionWithinContext(this, new ObservationExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, STIXPatternParser.RULE_observationExpression);
	                    this.state = 85;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 86;
	                    this.withinQualifier();
	                    break;

	                case 3:
	                    localctx = new ObservationExpressionRepeatedContext(this, new ObservationExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, STIXPatternParser.RULE_observationExpression);
	                    this.state = 87;
	                    if (!( this.precpred(this._ctx, 1))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                    }
	                    this.state = 88;
	                    this.repeatedQualifier();
	                    break;

	                } 
	            }
	            this.state = 93;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	comparisonExpression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ComparisonExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 10;
	    this.enterRecursionRule(localctx, 10, STIXPatternParser.RULE_comparisonExpression, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this.comparisonExpressionAnd(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 102;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new ComparisonExpressionContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, STIXPatternParser.RULE_comparisonExpression);
	                this.state = 97;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 98;
	                this.match(STIXPatternParser.OR);
	                this.state = 99;
	                this.comparisonExpression(3); 
	            }
	            this.state = 104;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	comparisonExpressionAnd(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ComparisonExpressionAndContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 12;
	    this.enterRecursionRule(localctx, 12, STIXPatternParser.RULE_comparisonExpressionAnd, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 106;
	        this.propTest();
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 113;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new ComparisonExpressionAndContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, STIXPatternParser.RULE_comparisonExpressionAnd);
	                this.state = 108;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 109;
	                this.match(STIXPatternParser.AND);
	                this.state = 110;
	                this.comparisonExpressionAnd(3); 
	            }
	            this.state = 115;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	propTest() {
	    let localctx = new PropTestContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, STIXPatternParser.RULE_propTest);
	    var _la = 0;
	    try {
	        this.state = 171;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new PropTestEqualContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 116;
	            this.objectPath();
	            this.state = 118;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===12) {
	                this.state = 117;
	                this.match(STIXPatternParser.NOT);
	            }

	            this.state = 120;
	            _la = this._input.LA(1);
	            if(!(_la===31 || _la===32)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 121;
	            this.primitiveLiteral();
	            break;

	        case 2:
	            localctx = new PropTestOrderContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 123;
	            this.objectPath();
	            this.state = 125;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===12) {
	                this.state = 124;
	                this.match(STIXPatternParser.NOT);
	            }

	            this.state = 127;
	            _la = this._input.LA(1);
	            if(!(((((_la - 33)) & ~0x1f) === 0 && ((1 << (_la - 33)) & 15) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 128;
	            this.orderableLiteral();
	            break;

	        case 3:
	            localctx = new PropTestSetContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 130;
	            this.objectPath();
	            this.state = 132;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===12) {
	                this.state = 131;
	                this.match(STIXPatternParser.NOT);
	            }

	            this.state = 134;
	            this.match(STIXPatternParser.IN);
	            this.state = 135;
	            this.setLiteral();
	            break;

	        case 4:
	            localctx = new PropTestLikeContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 137;
	            this.objectPath();
	            this.state = 139;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===12) {
	                this.state = 138;
	                this.match(STIXPatternParser.NOT);
	            }

	            this.state = 141;
	            this.match(STIXPatternParser.LIKE);
	            this.state = 142;
	            this.match(STIXPatternParser.StringLiteral);
	            break;

	        case 5:
	            localctx = new PropTestRegexContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 144;
	            this.objectPath();
	            this.state = 146;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===12) {
	                this.state = 145;
	                this.match(STIXPatternParser.NOT);
	            }

	            this.state = 148;
	            this.match(STIXPatternParser.MATCHES);
	            this.state = 149;
	            this.match(STIXPatternParser.StringLiteral);
	            break;

	        case 6:
	            localctx = new PropTestIsSubsetContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 151;
	            this.objectPath();
	            this.state = 153;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===12) {
	                this.state = 152;
	                this.match(STIXPatternParser.NOT);
	            }

	            this.state = 155;
	            this.match(STIXPatternParser.ISSUBSET);
	            this.state = 156;
	            this.match(STIXPatternParser.StringLiteral);
	            break;

	        case 7:
	            localctx = new PropTestIsSupersetContext(this, localctx);
	            this.enterOuterAlt(localctx, 7);
	            this.state = 158;
	            this.objectPath();
	            this.state = 160;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===12) {
	                this.state = 159;
	                this.match(STIXPatternParser.NOT);
	            }

	            this.state = 162;
	            this.match(STIXPatternParser.ISSUPERSET);
	            this.state = 163;
	            this.match(STIXPatternParser.StringLiteral);
	            break;

	        case 8:
	            localctx = new PropTestParenContext(this, localctx);
	            this.enterOuterAlt(localctx, 8);
	            this.state = 165;
	            this.match(STIXPatternParser.LPAREN);
	            this.state = 166;
	            this.comparisonExpression(0);
	            this.state = 167;
	            this.match(STIXPatternParser.RPAREN);
	            break;

	        case 9:
	            localctx = new PropTestExistsContext(this, localctx);
	            this.enterOuterAlt(localctx, 9);
	            this.state = 169;
	            this.match(STIXPatternParser.EXISTS);
	            this.state = 170;
	            this.objectPath();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	startStopQualifier() {
	    let localctx = new StartStopQualifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, STIXPatternParser.RULE_startStopQualifier);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 173;
	        this.match(STIXPatternParser.START);
	        this.state = 174;
	        this.match(STIXPatternParser.TimestampLiteral);
	        this.state = 175;
	        this.match(STIXPatternParser.STOP);
	        this.state = 176;
	        this.match(STIXPatternParser.TimestampLiteral);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


